[project]
name = "rlm-arbitrary-data-demo"
description = "RLMEnv demo for custom data serialization"
tags = ["rlm", "serialization", "demo"]
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.8.post2",
    "polars>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["rlm_arbitrary_data_demo.py", "pyproject.toml"]

[tool.verifiers.eval]
num_examples = 1
rollouts_per_example = 1
