[project]
name = "terminus-harbor"
description = "Terminus agent on Harbor tasks"
tags = ["eval"]
version = "0.1.1"
requires-python = ">=3.10"
dependencies = [
    "verifiers",
    "prime-sandboxes>=0.2.10",
    "tomli>=2.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["terminus_harbor.py", "pyproject.toml", "tasks/**/*"] 

[tool.verifiers.eval]
num_examples = 5
rollouts_per_example = 3
